fixed some turnManager logic